--- a/giftlink-backend/package.json
+++ b/giftlink-backend/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.8.0",
+    "mongoose": "^8.19.2",
     "pino": "^8.17.2",
     "pino-http": "^9.0.0",
     "pino-pretty": "^10.3.1"
